@@ -26,12 +26,12 @@ public class RawTableHeaderConstraintValidator implements ConstraintValidator<Ra
         if (view.source.isEmpty()) {
             return false; // a table with no cells has no header (an empty matrix is only a valid read result)
         }
-        var firstRow = view.source.get(0);
+        var firstRow = view.source.getFirst();
         if (firstRow == null || firstRow.isEmpty()) {
             return true; // an empty first row is a structural issue reported by other constraints
         }
         // A null cell or a null/blank value at the top-left is no header at all; isKnownTableHeader(null) rejects it.
-        var headerCell = firstRow.get(0);
+        var headerCell = firstRow.getFirst();
         Object value = headerCell == null ? null : headerCell.value();
         var header = value == null ? null : value.toString();
         return FREE_FORM_KIND.equals(view.kind)
