@@ -89,7 +89,7 @@ class FileRootWriteBatchTest {
         assertEquals("Replace data", folder.getValue().getComment());
         assertEquals(author, folder.getValue().getAuthor());
         assertEquals("Project1/data/a.txt",
-                ((List<FileItem>) items.getValue()).get(0).getData().getName());
+                ((List<FileItem>) items.getValue()).getFirst().getData().getName());
         verify(project).refresh();
     }
 
@@ -110,7 +110,7 @@ class FileRootWriteBatchTest {
         ArgumentCaptor<Iterable<FileItem>> items = ArgumentCaptor.forClass(Iterable.class);
         verify(repository).save(folder.capture(), items.capture(), eq(ChangesetType.DIFF));
         assertEquals("Project1", folder.getValue().getName());
-        assertEquals("Project1/a.txt", ((List<FileItem>) items.getValue()).get(0).getData().getName());
+        assertEquals("Project1/a.txt", ((List<FileItem>) items.getValue()).getFirst().getData().getName());
     }
 
     @Test
@@ -125,7 +125,7 @@ class FileRootWriteBatchTest {
         ArgumentCaptor<List<FileItem>> items = ArgumentCaptor.forClass(List.class);
         verify(root).writeBatch(eq("data"), items.capture(), eq(ChangesetType.DIFF), eq("Upload archive to data"));
         assertEquals(2, items.getValue().size());
-        assertEquals("data/a.txt", items.getValue().get(0).getData().getName());
+        assertEquals("data/a.txt", items.getValue().getFirst().getData().getName());
     }
 
     @Test
@@ -142,7 +142,7 @@ class FileRootWriteBatchTest {
         ArgumentCaptor<List<FileItem>> items = ArgumentCaptor.forClass(List.class);
         verify(root).writeBatch(eq("data"), items.capture(), eq(ChangesetType.DIFF), eq("Upload files to data"));
         assertEquals(2, items.getValue().size());
-        assertEquals("data/x.txt", items.getValue().get(0).getData().getName());
+        assertEquals("data/x.txt", items.getValue().getFirst().getData().getName());
         assertEquals("data/sub/y.txt", items.getValue().get(1).getData().getName());
     }
 
@@ -181,7 +181,7 @@ class FileRootWriteBatchTest {
         ArgumentCaptor<List<FileItem>> items = ArgumentCaptor.forClass(List.class);
         verify(root).writeBatch(eq("data"), items.capture(), eq(ChangesetType.FULL), eq("Upload files to data"));
         assertEquals(1, items.getValue().size());
-        assertEquals("data/keep.txt", items.getValue().get(0).getData().getName());
+        assertEquals("data/keep.txt", items.getValue().getFirst().getData().getName());
     }
 
     @Test
