@@ -22,7 +22,7 @@ class SecurityOpenApiProcessorTest {
 
         assertNotNull(result.getSecurity(), "security list must be populated");
         assertEquals(1, result.getSecurity().size());
-        assertTrue(result.getSecurity().get(0).containsKey("OAuth2"));
+        assertTrue(result.getSecurity().getFirst().containsKey("OAuth2"));
 
         var components = result.getComponents();
         assertNotNull(components);
